Add google scholar link in publications section

--- a/index.html
+++ b/index.html
@@ -128,6 +128,8 @@
     <!-- Publications Section -->
     <section id="publications">
         <h2>Publications</h2>
+        <p>Find them at <a href="https://scholar.google.com/citations?user=S4MUJtoAAAAJ&hl=en" target="_blank">Google
+                Scholar</a>.</p>
         <ul>
             <li>Patil R.P., et al. "Hardening in Au-Ag nanoboxes from stacking fault-dislocation interactions." Nature
                 Communications, 2020.</li>
