changed welcome message

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <section id="home">
         <h2>Welcome</h2>
-        <p>Hello, I'm Radhika. Please find below my professional resume.
+        <p>Hello, I'm Radhika. Please find my resume below.
         </p>
     </section>
 
