Changed stylesheet to style6, added link to president's gold medal award.

--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Radhika Patil</title>
-    <link rel="stylesheet" href="style5.css">
+    <link rel="stylesheet" href="style6.css">
+    <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Open+Sans:wght@400;600&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
     <header>
         <img src="profile2.jpeg" alt="Radhika Patil" class="profile-pic">
         <h1>Radhika Patil</h1>
-        <p>Email: radhikap12345 [at] gmail [dot] com | Phone: 650-546-5291</p>
+        <p>Email: radhikap23456 [at] gmail [dot] com | Phone: 650-546-5291</p>
         <!-- LinkedIn Link -->
         <p>Connect with me on <a href="https://www.linkedin.com/in/radhikap12345/" target="_blank">LinkedIn</a>.</p>
 
@@ -45,7 +47,9 @@
             <p>Bachelor of Technology (B.Tech) Mechanical Engineering, Minor in Computer Science and Engineering, 2016
             </p>
             <ul>
-                <li>Awards: President’s Gold Medal for graduating batch of 2016</li>
+                <li>President’s Gold Medal for graduating batch of 2016 <a href="https://iitgn.ac.in/students/awards"
+                        target="_blank">Link</a></p>
+                </li>
                 <li>Academic Excellence Scholarship and Dean’s list award for 2013, 2014, 2015</li>
             </ul>
         </div>
