Removed phone number

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <img src="profile2.jpeg" alt="Radhika Patil" class="profile-pic">
         <h1>Radhika Patil</h1>
-        <p>Email: radhikap23456 [at] gmail [dot] com | Phone: 650-546-5291</p>
+        <p>Email: radhikap23456 [at] gmail [dot] com </p>
         <!-- LinkedIn Link -->
         <p>Connect with me on <a href="https://www.linkedin.com/in/radhikap12345/" target="_blank">LinkedIn</a>.</p>
 
